# reagent

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  LICENSE  README.md  ai-interaction.md  main.py  pyproject.toml  requirements-mongo.txt  requirements.txt  requirements_deploy.txt  start.bat  start.sh  user-interaction.md
baseline/: README.md
context/: ARCHITECTURE.md  README.md  current-feature.md
dataset/: README.md
dataset/requirements/: REdev.txt  liuyang_homepage.txt  software_analysis.txt
docs/: index.md  multi-user-project-system.md
docs/design-doc/: architecture-readme.md  backend.md  frontend_integration.md  index.md  pipeline.md  reagent-ui-report.md  util.md
docs/exec-doc/: 2026-04-12-deploy-pipeline-hang-fix.md  2026-04-12-fix-pipeline-hang.md  api-implementation.md  index.md
docs/feature/: index.md
docs/references/: api-readme.md  api.md  artifacts.md  crewai.md  deploy-guide.md  deployment.md  frontend-integration-guide.md  index.md
docs/system-visualization/: code-functions.md  external-calls.md  index.md  pipeline.md  prompt-sources.md
experiment/: README.md
script/: README.md  api_smoke_test.py  deploy.sh  example_client.py  restart-api.sh  start-api.sh  status-api.sh  stop-api.sh
src/backend/: auth.py  config.py  main.py
tests/: process_runtime_probe.py  test_artifact_service.py  test_artifact_version_service.py  test_auth.py  test_execution_process.py  test_interrupt_timeout.py  test_llm_config.py  test_run_service.py  test_sqlite_store.py  test_srs_completion_recovery.py  test_stream_persistence.py  test_util_retry.py
(+55 files in other folders)
